--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.3.2
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -21,3 +22,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+flutter_native_splash:
+  image: assets/splash.png
+  color: "#42a5f5"
+  android: true
+  ios: true
