--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/splash.png
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/static/Montserrat-Regular.ttf
+        - asset: assets/fonts/static/Montserrat-Bold.ttf
 
 flutter_native_splash:
   image: assets/splash.png
