--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.3.2
   cupertino_icons: ^1.0.2
+  flutter_screenutil: ^5.9.0
+  google_fonts: ^6.1.0
+  flutter_feather_icons: ^2.0.0+1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +28,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/splash.png
+    - assets\images\bg1.png
+    - assets\images\megamall.png
+    - assets\images\jembatan1.jpeg
   fonts:
     - family: Montserrat
       fonts:
