Revisi by Jiiooo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ flutter:
     - assets\images\bg1.png
     - assets\images\megamall.png
     - assets\images\jembatan1.jpeg
+    - assets\images\icons.png
+    - assets\images\beach.jpg
+    - assets\images\shopping.jpg
+    - assets\images\amusement_park.jpg
+    - assets\images\wtb.jpg
+    - assets\images\vio-vio.jpg
+    - assets\images\location.png
+
   fonts:
     - family: Montserrat
       fonts:
