--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_feather_icons: ^2.0.0+1
   flutter_rating_bar: ^4.0.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +28,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/splash.png
+    - assets/splash1.png
     - assets\images\bg1.png
     - assets\images\megamall.png
     - assets\images\jembatan1.jpeg
