--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_feather_icons: ^2.0.0+1
   flutter_rating_bar: ^4.0.1
   http: ^1.1.0
+  network_info_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
