--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
         android:label="pbl_if14"
         android:name="${applicationName}"
         android:icon="@drawable/splash"> <!-- Menggunakan ikon dari direktori 'mipmap' -->
+        <!-- TODO: Add your Google Maps API key here -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBqHs_tZiI-HiD_NfF_r148Dx0FXwvnkKs"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
